# game_book_store

./: README.md  game_book_store.db  pyproject.toml
game_book_store/: __main__.py  config.py  core.py  db.py  game_book_store.db  models.py  settings.toml
game_book_store/templates/: new.html  template.html
