[tool.poetry]
name = "game-book-store"
version = "0.1.0"
description = ""
authors = ["Eduardo <ewang@bionexo.com>"]
readme = "README.md"
packages = [{include = "game_book_store"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
flask-mysqldb = "^1.0.1"
sqlmodel = "^0.0.8"
dynaconf = "^3.1.11"
flask-sqlalchemy = "^3.0.2"
optional = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
