[tool.poetry]
name = "game-book-store"
version = "0.1.0"
description = "Game Book Store"
authors = ["Eduardo Wang"]
readme = "README.md"
packages = [{include = "game_book_store"}]

[tool.poetry.dependencies]
python = "3.11.1"
flask = "^2.2.2"
sqlmodel = "^0.0.8"
pysqlite3 = "^0.5.0"
dynaconf = "^3.1.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
